Fix spacing issues

--- a/Application/EdFi.Ods.AdminApp.Web/wwwroot/Content/css/Site.css
+++ b/Application/EdFi.Ods.AdminApp.Web/wwwroot/Content/css/Site.css
@@ -1258,41 +1258,33 @@ input[type="checkbox"]:checked + label > .fa-check-square:before {
 
 /* Fonts */
 @font-face {
-  font-family: 'Open Sans';
-  src: url('~/content/fonts/opensans-regular-webfont.woff2') format('woff2'),
-       url('~/content/fonts/opensans-regular-webfont.woff') format('woff'),
-       url('~/content/fonts/opensans-regular-webfont.ttf') format('truetype');
+    font-family: 'Open Sans';
+    src: url('~/Content/fonts/opensans-regular-webfont.woff2') format('woff2'), url('~/Content/fonts/opensans-regular-webfont.woff') format('woff'), url('~/Content/fonts/opensans-regular-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Open Sans Light';
-  src: url('~/content/fonts/opensans-light-webfont.woff2') format('woff2'),
-       url('~/content/fonts/opensans-light-webfont.woff') format('woff'),
-       url('~/content/fonts/opensans-light-webfont.ttf') format('truetype');
+    font-family: 'Open Sans Light';
+    src: url('~/Content/fonts/opensans-light-webfont.woff2') format('woff2'), url('~/Content/fonts/opensans-light-webfont.woff') format('woff'), url('~/Content/fonts/opensans-light-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Open Sans Bold';
-  src: url('~/content/fonts/opensans-bold-webfont.woff2') format('woff2'),
-       url('~/content/fonts/opensans-bold-webfont.woff') format('woff'),
-       url('~/content/fonts/opensans-bold-webfont.ttf') format('truetype');
+    font-family: 'Open Sans Bold';
+    src: url('~/Content/fonts/opensans-bold-webfont.woff2') format('woff2'), url('~/Content/fonts/opensans-bold-webfont.woff') format('woff'), url('~/Content/fonts/opensans-bold-webfont.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'Open Sans Semibold';
-  src: url('~/content/fonts/opensans-semibold-webfont.woff2') format('woff2'),
-       url('~/content/fonts/opensans-semibold-webfont.woff') format('woff'),
-       url('~/content/fonts/opensans-semibold-webfont.ttf') format('truetype');
+    font-family: 'Open Sans Semibold';
+    src: url('~/Content/fonts/opensans-semibold-webfont.woff2') format('woff2'), url('~/Content/fonts/opensans-semibold-webfont.woff') format('woff'), url('~/Content/fonts/opensans-semibold-webfont.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat Regular';
-    src:  local('Montserrat-Regular'), url('~/content/fonts/montserrat-regular-webfont.woff2') format('woff2');
+    src: local('Montserrat-Regular'), url('~/Content/fonts/montserrat-regular-webfont.woff2') format('woff2');
 }
 
 @font-face {
     font-family: 'Montserrat Bold';
-    src:  local('Montserrat-Bold'), url('~/content/fonts/montserrat-bold-webfont.woff2') format('woff2');
+    src: local('Montserrat-Bold'), url('~/Content/fonts/montserrat-bold-webfont.woff2') format('woff2');
 }
 
 /* Chrome, Safari, Edge, Opera */
